version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/MeshExtrude.rst.txt
.. vale off



:class:`MeshExtrude`
====================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.MeshExtrude

   Bases: :py:obj:`object`


   
   Pull method enables you to extrude or revolve element faces, topofaces or scoped bodies (only shell body) from a surface or solid mesh. Pull also allows to create surface coating on solid bodies, element faces and topofaces.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MeshExtrude

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~ClearGeneratedData`
            - Clear generated data.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Generate`
            - Generate selected mesh pull.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AxisOfRevolution`
            - To select the coordinate axis along which the selected elements can be revolved. The available options are X Axis, Y Axis, Z Axis.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~CoordinateSystem`
            - To generate elements in the specified coordinate system. The Coordinate System allows to select the Global Coordinate System by default.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~ElementOption`
            - Gets or sets the ElementOption.
          * - :py:attr:`~ExtrudeBy`
            - To specify the method of Extrude. The available options are Use Coordinate System and Face Normal.
          * - :py:attr:`~FeatureAngle`
            - To specify feature angle for splitting side faces.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~Height`
            - To specify the height for the volume of solid elements in the method of Extrude.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~Location`
            - Allows you to scope elements, element faces, topofaces and sheet bodies for Extrude or Revolve. Also, scopes element faces, topofaces and solid bodies for Surface Coating.
          * - :py:attr:`~Material`
            - To select the material of your choice. You can also select a different material from the parent body material.
          * - :py:attr:`~MergeProfileNodes`
            - To merge nodes on the profile body and pull generated body.
          * - :py:attr:`~Method`
            - To select the method of Pull. There are three methods. They are Extrude, Revolve and Surface Coating.
          * - :py:attr:`~NonlinearMaterialEffects`
            - Gets or sets the NonlinearMaterialEffects.
          * - :py:attr:`~NumberOfLayers`
            - To specify the number of layers to be used for Extrude and Revolve.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RevolutionAngle`
            - To specify angle of revolution for the solid elements in the method of Revolve.
          * - :py:attr:`~ScopingMethod`
            - Defines what type of selection this object is scoped to.
          * - :py:attr:`~StiffnessOption`
            - To provide the stiffness option of the shell body created by surface coating. The available options are Stress Evaluation Only, Membrane Only, Membrane and Bending.
          * - :py:attr:`~Suppressed`
            - To suppress the selected entities. You can select Yes to suppress the selected entities and No to unsuppress the selected entities. The default value is No.
          * - :py:attr:`~ThermalStrainCalculation`
            - Gets or sets the ThermalStrainCalculation.
          * - :py:attr:`~Thickness`
            - To specify the thickness for surface coating. The Thickness option is available only when the Stiffness Behavior is set to Membrane Only or Membrane and Bending.
          * - :py:attr:`~UpTo`
            - To generate elements up to the specified target. The target can be faces from solids or sheet bodies and multiple faces with sharing topoedge.
          * - :py:attr:`~UpToTarget`
            - The target can be faces from solids or sheet bodies and multiple faces with sharing topoedge in Extrude UpTo.
          * - :py:attr:`~UseCoordinateSystem`
            - The Use Coordinate System allows to select any of the XYZ coordinate axis in the method of Extrude.
          * - :py:attr:`~UseFeatureAngle`
            - To split side faces by speficied feature angle.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: AxisOfRevolution
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CoordinateSystemAxisType]

   
   To select the coordinate axis along which the selected elements can be revolved. The available options are X Axis, Y Axis, Z Axis.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]

   
   To generate elements in the specified coordinate system. The Coordinate System allows to select the Global Coordinate System by default.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SweepElementOptionType]

   
   Gets or sets the ElementOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExtrudeBy
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ExtrudeBy]

   
   To specify the method of Extrude. The available options are Use Coordinate System and Face Normal.
















   ..
       !! processed by numpydoc !!

.. py:property:: FeatureAngle
   :type: Optional[Ansys.Core.Units.Quantity]

   
   To specify feature angle for splitting side faces.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: Height
   :type: Optional[Ansys.Core.Units.Quantity]

   
   To specify the height for the volume of solid elements in the method of Extrude.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSMeshExtrudeAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]

   
   Allows you to scope elements, element faces, topofaces and sheet bodies for Extrude or Revolve. Also, scopes element faces, topofaces and solid bodies for Surface Coating.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[str]

   
   To select the material of your choice. You can also select a different material from the parent body material.
















   ..
       !! processed by numpydoc !!

.. py:property:: MergeProfileNodes
   :type: Optional[bool]

   
   To merge nodes on the profile body and pull generated body.
















   ..
       !! processed by numpydoc !!

.. py:property:: Method
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PullMethod]

   
   To select the method of Pull. There are three methods. They are Extrude, Revolve and Surface Coating.
















   ..
       !! processed by numpydoc !!

.. py:property:: NonlinearMaterialEffects
   :type: Optional[bool]

   
   Gets or sets the NonlinearMaterialEffects.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfLayers
   :type: Optional[int]

   
   To specify the number of layers to be used for Extrude and Revolve.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RevolutionAngle
   :type: Optional[Ansys.Core.Units.Quantity]

   
   To specify angle of revolution for the solid elements in the method of Revolve.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopingMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GeometryDefineByType]

   
   Defines what type of selection this object is scoped to.
















   ..
       !! processed by numpydoc !!

.. py:property:: StiffnessOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ShellElementStiffnessOption]

   
   To provide the stiffness option of the shell body created by surface coating. The available options are Stress Evaluation Only, Membrane Only, Membrane and Bending.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]

   
   To suppress the selected entities. You can select Yes to suppress the selected entities and No to unsuppress the selected entities. The default value is No.
















   ..
       !! processed by numpydoc !!

.. py:property:: ThermalStrainCalculation
   :type: Optional[bool]

   
   Gets or sets the ThermalStrainCalculation.
















   ..
       !! processed by numpydoc !!

.. py:property:: Thickness
   :type: Optional[Ansys.Core.Units.Quantity]

   
   To specify the thickness for surface coating. The Thickness option is available only when the Stiffness Behavior is set to Membrane Only or Membrane and Bending.
















   ..
       !! processed by numpydoc !!

.. py:property:: UpTo
   :type: Optional[bool]

   
   To generate elements up to the specified target. The target can be faces from solids or sheet bodies and multiple faces with sharing topoedge.
















   ..
       !! processed by numpydoc !!

.. py:property:: UpToTarget
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]

   
   The target can be faces from solids or sheet bodies and multiple faces with sharing topoedge in Extrude UpTo.
















   ..
       !! processed by numpydoc !!

.. py:property:: UseCoordinateSystem
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CoordinateSystemAxisType]

   
   The Use Coordinate System allows to select any of the XYZ coordinate axis in the method of Extrude.
















   ..
       !! processed by numpydoc !!

.. py:property:: UseFeatureAngle
   :type: Optional[bool]

   
   To split side faces by speficied feature angle.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: ClearGeneratedData() -> None

   
   Clear generated data.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Generate() -> None

   
   Generate selected mesh pull.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on